# text_to_speech

./: pyproject.toml
src/: model.py
