[project]
name = "fm-strategies"
description = "Library containing insights"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "speechbrain>=1.0.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.48.1",
    "tts>=0.22.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "fm-strategies[notebook,vis]", # makes it so all extras are included in dev
    "pytest~=8.3",
    "coverage~=7.6",
    # Ruff CI version is in .gitlab-ci.yml
    "ruff==0.6.3",
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240909",
]

[tool.uv]
default-groups = ["dev"]

# [tool.uv.sources]
# netra-fm-trading-core = { path = "../netra-fm-trading-core", editable = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
packages = ["fm_strategies"]

[[tool.mypy.overrides]]
module = [
    "netra.fm_outlierdetection.*",
    "plotly.*",  # https://github.com/plotly/plotly.py/issues/1103
    "uspower.*",
    "netra.idemodels.*",
    "intradayeu.strategies.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
exclude = []

[tool.ruff.lint]
extend-select = [
    "I",
    "UP",
    "B",
    "DTZ",
    "SIM",
    "PTH",
    "PLW",
    "PLE",
    "FLY",
    "FURB",
    "PGH",
    "N",
    "ANN",
    "RUF",
]
extend-ignore = [
    # self / cls do not need annotation
    "ANN101",
    "ANN102",
    "ANN401",  # disable any type ban
]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["pandas.Timestamp", "pandas.Timedelta"]
